Update Anonymize PII Example using MS Presidio.ipynb

--- a/data analysis/Anonymize PII Example using MS Presidio.ipynb
+++ b/data analysis/Anonymize PII Example using MS Presidio.ipynb
@@ -30,10 +30,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "fc9pxXKrgJca",
-        "outputId": "b12fd159-784e-4a61-8a07-a97de4270c13"
+        "outputId": "8b60ccbd-9fc5-4c27-f44e-9b8c395abd73"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 21,
       "metadata": {
         "scrolled": true,
         "id": "qZGte02oSzsh"
@@ -118,7 +119,7 @@
       "metadata": {
         "id": "Aiet73PjTAdC"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -132,13 +133,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KbFgSORSSzsh",
-        "outputId": "b0f5e90b-fd95-4aad-eae7-bc58d114bb57"
+        "outputId": "ac80f806-5393-4030-ce09-68efcb7c6f5c"
       },
       "outputs": [
         {
@@ -147,20 +148,7 @@
           "text": [
             "WARNING:presidio-analyzer:model_to_presidio_entity_mapping is missing from configuration, using default\n",
             "WARNING:presidio-analyzer:low_score_entity_names is missing from configuration, using default\n",
-            "WARNING:presidio-analyzer:labels_to_ignore is missing from configuration, using default\n",
-            "WARNING:presidio-analyzer:Model it_core_news_lg is not installed. Downloading...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
-            "You can now load the package via spacy.load('it_core_news_lg')\n",
-            "\u001b[38;5;3m⚠ Restart to reload dependencies\u001b[0m\n",
-            "If you are in a Jupyter or Colab notebook, you may need to restart Python in\n",
-            "order to load all the package's dependencies. You can do this by selecting the\n",
-            "'Restart kernel' or 'Restart runtime' option.\n"
+            "WARNING:presidio-analyzer:labels_to_ignore is missing from configuration, using default\n"
           ]
         }
       ],
@@ -185,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {
         "id": "ar513WYUSzsh"
       },
@@ -208,13 +196,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "68-4jCNASzsh",
-        "outputId": "08e8af0c-7bbe-4f37-c830-810306a73920"
+        "outputId": "8bbd5932-5bdb-418c-99a0-2d1bce08d0c5"
       },
       "outputs": [
         {
@@ -267,14 +255,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1D0pxWPMSzsi",
-        "outputId": "f8a3de8a-7806-49f0-f33e-37e9e4e23807"
+        "outputId": "7b4e42f2-6ef9-48c3-ab94-0ea755eb3c89"
       },
       "outputs": [
         {
@@ -288,23 +276,27 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Entity: IT_FISCAL_CODE, Start: 42, End: 58, Score: 1.0\n",
+            "Entity: IT_FISCAL_CODE, Start: 95, End: 111, Score: 1.0\n",
             "Extracted text: 'STCCST83A15L113V'\n",
             "--------------------------------\n",
             "--------------------------------\n",
-            "Entity: IT_VEHICLE_PLATE, Start: 0, End: 7, Score: 0.8\n",
+            "Entity: PERSON, Start: 57, End: 73, Score: 0.85\n",
+            "Extracted text: 'Cristiano Sticca'\n",
+            "--------------------------------\n",
+            "--------------------------------\n",
+            "Entity: IT_VEHICLE_PLATE, Start: 26, End: 33, Score: 0.8\n",
             "Extracted text: 'AB123CD'\n",
             "--------------------------------\n",
             "--------------------------------\n",
-            "Entity: DATE_TIME, Start: 31, End: 41, Score: 0.6\n",
+            "Entity: DATE_TIME, Start: 82, End: 92, Score: 0.6\n",
             "Extracted text: '15/01/1983'\n",
             "--------------------------------\n",
             "--------------------------------\n",
-            "<IT_VEHICLE_PLATE> Cristiano Nato nato il <DATE_TIME> <IT_FISCAL_CODE>.\n",
+            "La targa della mia auto è <IT_VEHICLE_PLATE> e il codice fiscale di <PERSON> nato il <DATE_TIME> è <IT_FISCAL_CODE>.\n",
             "--------------------------------\n",
             "--------------------------------\n",
             "Testo offuscato con caratteri *\n",
-            "AB123** Cristiano Nato nato il <DATE_TIME> STCCST**********.\n"
+            "La targa della mia auto è AB123** e il codice fiscale di <PERSON> nato il <DATE_TIME> è STCCST**********.\n"
           ]
         }
       ],
@@ -362,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 25,
       "metadata": {
         "id": "ZK0X2IbBSzsi"
       },
