--- a/data analysis/imu-remittance-analysis.ipynb
+++ b/data analysis/imu-remittance-analysis.ipynb
@@ -7,32 +7,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ====== Setup di base (CML) ======\n",
+    "# --- Spark session via CML data connection\n",
     "import cml.data_v1 as cmldata\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "from pyspark.sql import SparkSession\n",
     "import pyspark.sql.functions as F\n",
-    "import os, re\n",
     "\n",
-    "# Usa la connection del workspace (chiedi all'admin il nome esatto se diverso)\n",
-    "CONNECTION_NAME = \"pdnd-prod-dl-1\"\n",
+    "CONNECTION_NAME = \"pdnd-prod-dl-1\"   # <-- adjust if your connection is named differently\n",
     "conn = cmldata.get_connection(CONNECTION_NAME)\n",
-    "spark: SparkSession = conn.get_spark_session()\n",
-    "print(\"Spark enabled:\", spark.version)\n",
+    "spark = conn.get_spark_session()\n",
+    "print(\"Spark enabled\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67529bc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keep Spark small to avoid hitting namespace quotas\n",
+    "spark.conf.set(\"spark.sql.shuffle.partitions\", \"32\")\n",
+    "spark.conf.set(\"spark.default.parallelism\", \"32\")\n",
     "\n",
-    "# Un po' di \"igiene\" per ridurre l'impatto\n",
-    "spark.conf.set(\"spark.sql.shuffle.partitions\", \"64\")  # abbassa shuffles\n",
-    "spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"false\")  # evita errori Arrow\n",
+    "# If your environment allows these, they help keep executors low:\n",
+    "spark.conf.set(\"spark.dynamicAllocation.enabled\", \"true\")\n",
+    "spark.conf.set(\"spark.dynamicAllocation.minExecutors\", \"1\")\n",
+    "spark.conf.set(\"spark.dynamicAllocation.initialExecutors\", \"1\")\n",
+    "spark.conf.set(\"spark.dynamicAllocation.maxExecutors\", \"4\")   # stay below quota\n",
     "\n",
-    "# ====== Parametri facili da toccare ======\n",
-    "DATE_FROM        = \"2025-01-01 00:00:00\"  # filtro data minimo\n",
-    "TRANSFER_CAT_LIKE= \"%0101100IM%\"          # macro categoria\n",
-    "SAMPLE_FRACTION  = 0.05                    # 5% random sample lato Spark (None per disattivare)\n",
-    "MAX_ROWS         = 100_000                 # limite hard (0 o None = nessun limite, sconsigliato in CML)\n",
-    "SHOW_ROWS        = 10                      # righe da mostrare di esempio\n",
+    "# Be more patient detecting missing pods (if allowed)\n",
+    "spark.conf.set(\"spark.kubernetes.executor.missingPodDetectDelta\", \"60s\")\n",
     "\n",
-    "# Dove salvare i CSV localmente nel progetto CML\n",
-    "OUT_DIR = \"./artifacts\"\n",
-    "os.makedirs(OUT_DIR, exist_ok=True)"
+    "# Disable Arrow → avoids some driver/executor serialization issues in restricted clusters\n",
+    "spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"false\")\n",
+    "\n",
+    "print(\"Spark tuned for notebook.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec0b1476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- User-tunable knobs\n",
+    "DATE_FROM      = \"2025-01-01 00:00:00\"  # lower bound on payment datetime\n",
+    "SAMPLE_FRAC    = 0.02                   # 2% random sample at source (set smaller if you hit limits)\n",
+    "MAX_ROWS       = 50_000                 # hard cap at source\n",
+    "ML_MAX_ROWS    = 10_000                 # rows collected to pandas (keep small)\n",
+    "SHOW_ROWS      = 10                     # preview rows to show\n",
+    "\n",
+    "print(f\"DATE_FROM={DATE_FROM}, SAMPLE_FRAC={SAMPLE_FRAC}, MAX_ROWS={MAX_ROWS}, ML_MAX_ROWS={ML_MAX_ROWS}\")\n"
    ]
   },
   {
@@ -43,185 +72,169 @@
    "outputs": [],
    "source": [
     "query = f\"\"\"\n",
-    "SELECT\n",
-    "  t.fiscalcodepa        AS pa,\n",
-    "  t.companyname         AS ragione_sociale,\n",
-    "  t.remittanceinformation AS remittance\n",
-    "FROM pagopa.silver_positive sp\n",
-    "LATERAL VIEW EXPLODE(sp.transferlist) t_view AS t\n",
-    "WHERE t.transfercategory LIKE '{TRANSFER_CAT_LIKE}'\n",
-    "  AND sp.paymentinfo.paymentdatetime >= CAST('{DATE_FROM}' AS TIMESTAMP)\n",
-    "  AND t.remittanceinformation IS NOT NULL\n",
-    "  AND t.remittanceinformation <> ''\n",
+    "SELECT pa, ragione_sociale, remittance\n",
+    "FROM (\n",
+    "  SELECT\n",
+    "    t.fiscalcodepa           AS pa,\n",
+    "    t.companyname            AS ragione_sociale,\n",
+    "    t.remittanceinformation  AS remittance\n",
+    "  FROM pagopa.silver_positive sp\n",
+    "  LATERAL VIEW EXPLODE(sp.transferlist) t_view AS t\n",
+    "  WHERE t.transfercategory LIKE '%0101100IM%'\n",
+    "    AND sp.paymentinfo.paymentdatetime >= CAST('{DATE_FROM}' AS TIMESTAMP)\n",
+    "    AND t.remittanceinformation IS NOT NULL\n",
+    "    AND t.remittanceinformation <> ''\n",
+    ") base\n",
+    "WHERE rand() <= {SAMPLE_FRAC}\n",
+    "LIMIT {MAX_ROWS}\n",
     "\"\"\"\n",
     "\n",
-    "print(\"Eseguo query Spark…\")\n",
+    "print(\"Running Spark SQL with sampling+limit pushdown…\")\n",
     "df = spark.sql(query).select(\n",
-    "    F.col(\"pa\").cast(\"string\"),\n",
-    "    F.col(\"ragione_sociale\").cast(\"string\"),\n",
-    "    F.col(\"remittance\").cast(\"string\")\n",
+    "    F.col(\"pa\").cast(\"string\").alias(\"pa\"),\n",
+    "    F.col(\"ragione_sociale\").cast(\"string\").alias(\"ragione_sociale\"),\n",
+    "    F.col(\"remittance\").cast(\"string\").alias(\"remittance\")\n",
     ")\n",
     "\n",
-    "# Campionamento e limite (per restare leggeri in CML)\n",
-    "if SAMPLE_FRACTION:\n",
-    "    df = df.sample(False, float(SAMPLE_FRACTION))\n",
-    "if MAX_ROWS and int(MAX_ROWS) > 0:\n",
-    "    df = df.limit(int(MAX_ROWS))\n",
-    "\n",
-    "df = df.cache()\n",
-    "print(\"Conteggio (dopo sample/limit):\", df.count())\n",
-    "df.show(SHOW_ROWS, truncate=False)\n"
+    "print(\"Schema:\")\n",
+    "df.printSchema()\n",
+    "print(\"Preview:\")\n",
+    "df.show(SHOW_ROWS, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fda0e97",
+   "id": "7581a65c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- a) Volumi per PA / ragione sociale (come la tua prima query)\n",
-    "volumi = (df.groupBy(\"pa\", \"ragione_sociale\")\n",
-    "            .agg(F.count(\"*\").alias(\"trx\"))\n",
-    "            .orderBy(F.desc(\"trx\")))\n",
+    "# IMPORTANT: keep ML sample small to avoid driver OOM and quota pressure\n",
+    "df_small = df.limit(ML_MAX_ROWS)\n",
     "\n",
-    "volumi.show(20, truncate=False)\n",
-    "volumi.write.mode(\"overwrite\").option(\"header\",\"true\") \\\n",
-    "    .csv(os.path.join(OUT_DIR, \"volumi_per_pa_csv\"))  # cartella con part file\n",
-    "print(\"Volumi per PA: salvati in\", os.path.join(OUT_DIR, \"volumi_per_pa_csv\"))\n",
-    "\n",
-    "# --- b) Rule-based categories (facile da leggere, veloce)\n",
-    "#     Usiamo regex in lower-case per intercettare varianti\n",
-    "rem = F.lower(F.col(\"remittance\"))\n",
-    "categoria = (\n",
-    "    F.when(rem.rlike(r\".*(rateizz|rata|rateal).*\"), \"Rata\")\n",
-    "     .when(rem.rlike(r\".*provvediment.*\"),          \"Provvedimento\")\n",
-    "     .when(rem.rlike(r\".*accertament.*\"),           \"Accertamento\")\n",
-    "     .when(rem.rlike(r\".*avvis.*\"),                 \"Avviso\")\n",
-    "     .when(rem.rlike(r\".*fattur.*\"),                \"Fattura\")\n",
-    "     .otherwise(\"Altro\")\n",
-    ")\n",
-    "\n",
-    "cat_df = df.withColumn(\"categoria\", categoria)\n",
-    "conteggi_cat = (cat_df.groupBy(\"categoria\").count().orderBy(F.desc(\"count\")))\n",
-    "conteggi_cat.show(truncate=False)\n",
-    "\n",
-    "conteggi_cat.write.mode(\"overwrite\").option(\"header\",\"true\") \\\n",
-    "    .csv(os.path.join(OUT_DIR, \"conteggi_categorie_csv\"))\n",
-    "print(\"Conteggi categorie: salvati in\", os.path.join(OUT_DIR, \"conteggi_categorie_csv\"))\n"
+    "print(\"Collecting a small slice to pandas…\")\n",
+    "pdf = df_small.toPandas()\n",
+    "print(f\"Pandas rows: {len(pdf)}\")\n",
+    "pdf.head(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83895b38",
+   "id": "de6c5d33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prendiamo solo la colonna testuale\n",
-    "text_spark = df.select(\"remittance\").dropna()\n",
+    "import re\n",
     "\n",
-    "# Per sicurezza, prendiamo un ulteriore mini campione per Pandas (es. 30k righe max)\n",
-    "PANDAS_CAP = 30_000\n",
-    "text_spark = text_spark.limit(PANDAS_CAP)\n",
+    "# Try NLTK stopwords if available; fall back to a small built-in list otherwise\n",
+    "try:\n",
+    "    import nltk\n",
+    "    from nltk.corpus import stopwords\n",
+    "    nltk.data.find('corpora/stopwords')\n",
+    "    it_stop = set(stopwords.words('italian'))\n",
+    "    print(\"Using NLTK Italian stopwords.\")\n",
+    "except Exception:\n",
+    "    it_stop = {\n",
+    "        \"a\",\"ad\",\"al\",\"alla\",\"alle\",\"allo\",\"ai\",\"agli\",\"agli\",\"all\",\"con\",\"col\",\"coi\",\"come\",\n",
+    "        \"da\",\"dal\",\"dalla\",\"dalle\",\"dallo\",\"dei\",\"del\",\"della\",\"delle\",\"dello\",\n",
+    "        \"di\",\"e\",\"ed\",\"gli\",\"i\",\"il\",\"in\",\"la\",\"le\",\"lo\",\"l\",\"ma\",\"mi\",\"ne\",\"nei\",\"nella\",\n",
+    "        \"nelle\",\"nello\",\"no\",\"non\",\"o\",\"ogni\",\"per\",\"piu\",\"poi\",\"qua\",\"quale\",\"quali\",\"quello\",\n",
+    "        \"quella\",\"quelle\",\"quelli\",\"se\",\"sia\",\"siano\",\"si\",\"sono\",\"sul\",\"sulla\",\"sulle\",\"sullo\",\n",
+    "        \"su\",\"tra\",\"un\",\"una\",\"uno\",\"voi\",\"noi\",\"voi\",\"è\",\"e'\",\"d\",\"l\",\"s\",\"c\",\"t\"\n",
+    "    }\n",
+    "    print(\"Using fallback Italian stopwords (compact list).\")\n",
     "\n",
-    "print(\"Converto a Pandas…\")\n",
-    "import pandas as pd\n",
-    "text_pd = text_spark.toPandas()  # Arrow disabilitato sopra per evitare errori\n",
-    "print(\"Righe Pandas:\", len(text_pd))\n",
-    "text_pd.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c35a0626",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nltk, string\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem.snowball import ItalianStemmer\n",
-    "\n",
-    "# assicurati che questi pacchetti NLTK siano presenti (la prima volta servono i download)\n",
-    "nltk.download('stopwords', quiet=True)\n",
-    "nltk.download('punkt', quiet=True)\n",
-    "\n",
-    "STOP_IT = set(stopwords.words('italian'))\n",
-    "STEMMER = ItalianStemmer()\n",
-    "\n",
-    "punct_digits = re.compile(rf\"[{re.escape(string.punctuation)}0-9]+\")\n",
-    "\n",
-    "def preprocess(s: str, do_stem: bool = True) -> str:\n",
-    "    if not isinstance(s, str):\n",
-    "        return \"\"\n",
+    "def normalize_text(s: str) -> str:\n",
     "    s = s.lower()\n",
-    "    s = punct_digits.sub(\" \", s)\n",
-    "    tokens = [t for t in s.split() if len(t) > 2 and t not in STOP_IT]\n",
-    "    if do_stem:\n",
-    "        tokens = [STEMMER.stem(t) for t in tokens]\n",
+    "    # keep letters+spaces, replace others with space\n",
+    "    s = re.sub(r\"[^a-zàèéìòóùç\\s]\", \" \", s)\n",
+    "    s = re.sub(r\"\\s+\", \" \", s).strip()\n",
+    "    return s\n",
+    "\n",
+    "def preprocess(s: str) -> str:\n",
+    "    s = normalize_text(s)\n",
+    "    tokens = [tok for tok in s.split() if tok not in it_stop and len(tok) > 2]\n",
     "    return \" \".join(tokens)\n",
     "\n",
-    "text_pd[\"processed\"] = text_pd[\"remittance\"].map(preprocess)\n",
-    "text_pd[\"processed\"].head(10)\n"
+    "print(\"Preprocessing sample:\")\n",
+    "pdf[\"remit_clean\"] = pdf[\"remittance\"].astype(str).apply(preprocess)\n",
+    "pdf[[\"remittance\", \"remit_clean\"]].head(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6aa9e1d",
+   "id": "2d701ef7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "# TF-IDF\n",
-    "vectorizer = TfidfVectorizer(max_df=0.8, min_df=5)  # parametri prudenziali\n",
-    "X = vectorizer.fit_transform(text_pd[\"processed\"])\n",
+    "# TF-IDF with modest bounds to keep matrix small\n",
+    "vectorizer = TfidfVectorizer(max_df=0.8, min_df=5)  # tweak if your sample is very small/large\n",
+    "X = vectorizer.fit_transform(pdf[\"remit_clean\"])\n",
+    "print(\"TF-IDF shape:\", X.shape)\n",
     "\n",
-    "k = 8  # scegli tu, oppure fai il \"gomito\" su un campione più piccolo\n",
-    "kmeans = KMeans(n_clusters=k, random_state=42, n_init=\"auto\")\n",
-    "labels = kmeans.fit_predict(X)\n",
-    "text_pd[\"cluster\"] = labels\n",
+    "# Choose a small k; you can iterate later\n",
+    "K = 8\n",
+    "print(f\"Training KMeans with k={K}…\")\n",
+    "kmeans = KMeans(n_clusters=K, random_state=42, n_init=\"auto\")\n",
+    "kmeans.fit(X)\n",
     "\n",
-    "print(\"Distribuzione cluster:\")\n",
-    "print(text_pd[\"cluster\"].value_counts().sort_index())\n"
+    "pdf[\"cluster\"] = kmeans.labels_\n",
+    "print(\"Cluster distribution:\")\n",
+    "print(pdf[\"cluster\"].value_counts().sort_index())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "409149e8",
+   "id": "a269975d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "terms = np.array(vectorizer.get_feature_names_out())\n",
-    "order_centroids = kmeans.cluster_centers_.argsort()[:, ::-1]\n",
+    "terms = vectorizer.get_feature_names_out()\n",
+    "order_centroids = np.argsort(kmeans.cluster_centers_, axis=1)[:, ::-1]\n",
     "\n",
     "TOP_N = 10\n",
-    "for i in range(k):\n",
-    "    print(\"\\n\" + \"=\"*70)\n",
-    "    print(f\"Cluster {i} | size={ (text_pd['cluster']==i).sum() }\")\n",
-    "    print(\"Top terms:\", \", \".join(terms[order_centroids[i, :TOP_N]]))\n",
-    "    # 3 esempi\n",
-    "    samples = text_pd.loc[text_pd[\"cluster\"]==i, \"remittance\"].head(3).tolist()\n",
-    "    for s in samples:\n",
-    "        print(\"  -\", s)\n"
+    "SAMPLES_PER_CLUSTER = 3\n",
+    "\n",
+    "for i in range(K):\n",
+    "    print(\"\\n\" + \"-\"*60)\n",
+    "    print(f\"Cluster {i} | size={ (pdf['cluster']==i).sum() }\")\n",
+    "    top_words = [terms[idx] for idx in order_centroids[i, :TOP_N]]\n",
+    "    print(\"Top words:\", \", \".join(top_words))\n",
+    "\n",
+    "    examples = pdf.loc[pdf[\"cluster\"]==i, \"remittance\"].head(SAMPLES_PER_CLUSTER).tolist()\n",
+    "    for e in examples:\n",
+    "        print(\"  •\", e[:200].replace(\"\\n\",\" \"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e12a73",
+   "id": "da4bfc97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path = os.path.join(OUT_DIR, \"remittance_clusters_sample.csv\")\n",
-    "text_pd[[\"remittance\",\"processed\",\"cluster\"]].to_csv(csv_path, index=False)\n",
-    "print(\"Clustering (sample) salvato in:\", csv_path)\n"
+    "# Save cluster assignments and top words in project workspace (local)\n",
+    "assign_path = \"remittance_clusters_sample.csv\"\n",
+    "pdf[[\"pa\",\"ragione_sociale\",\"remittance\",\"cluster\"]].to_csv(assign_path, index=False, encoding=\"utf-8\")\n",
+    "print(f\"Wrote: {assign_path}\")\n",
+    "\n",
+    "# Top words table\n",
+    "rows = []\n",
+    "for i in range(K):\n",
+    "    top_words = [terms[idx] for idx in order_centroids[i, :10]]\n",
+    "    rows.append({\"cluster\": i, \"top_words\": \", \".join(top_words)})\n",
+    "\n",
+    "import pandas as pd\n",
+    "pd.DataFrame(rows).to_csv(\"cluster_top_words.csv\", index=False, encoding=\"utf-8\")\n",
+    "print(\"Wrote: cluster_top_words.csv\")\n"
    ]
   }
  ],
